blink_sass/pages/_visualizations.sass
/********************************************
 * Visualizations Styles
 *******************************************/

.worksheet-panel-body

  .extent
    fill: rgba(40, 130, 50, 0.5)

  .axis-label, .axis-label-container div
    font-weight: 500
    font-size: 1.1em

  .plot-div
    overflow: hidden
    max-height: 925px
    foreignObject
      div
        overflow: hidden
        text-overflow: ellipsis
        padding: 5px 5px 5px 5px
        line-height: 1.25
        max-height: 100%
        &.truncated-single
          white-space: nowrap
          text-align: end
        &.centered
          text-align: center
    .x-label-container, .y-label-container
      div
        text-align: center

    .axis path, .axis line
        fill: none
        stroke: #000

    .grid .tick, .axis .tick line
        stroke: lightgrey
        stroke-opacity: 0.7

    .grid path
        stroke-width: 0

    .expected_fill.selected
        stroke: $tooltip-color
        stroke-width: 5px

    .extent
        fill: rgba(40,130,50,0.5)
        stroke: #fff

    .plot-bar
        fill: rgba(0,0,0,0.5)
        &:hover, &.selected
            fill: rgba(0,0,225,0.5)

    .show-flyout:hover
        cursor: pointer

    .pairwise-result
        .table
            th.logp, th.n, th.na, th.nb, th.pa, th.pb
                width: 60px
            td
                word-wrap: break-word
                word-break: break-word

  .save-cohort-card
    background-color: rgba($tooltip-color, 0.8)
    border-radius: 3px
    color: #fff
    padding: 5px
    width: 210px

  .legend
      display: inline-block
      padding: 15px 0px 0px 15px
      overflow-y: auto
      max-height: 150px
      vertical-align: top
      .unselected
          fill-opacity: 0

// Plot selector styles

.panel.plot
  box-shadow: none
  margin: 0

.plot .panel-heading
    a.toggle-selection
        color: $isb-dark
        &.active
            color: $link-color

#seqpeek
    #seqpeek-form
        margin-top: 20px
        > div
            width: 80%
    .extent
        fill: #000
        fill-opacity: .1

#circviz
    margin-top: 80px

    //svg
    //    cursor:default

    .ticks .labels
        stroke: black
        text-anchor: middle
        visibility: hidden
        dy: .35em
        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif
        font-size: 13px
        font-weight: normal

    .region_label
        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif
        font-size: 20px
        font-weight: normal

    .axes .labels
        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif
        font-size: 12px
        font-weight: normal

    svg .ideogram .radial_lines
        stroke: null
        /*stroke:#444;*/
        stroke-width: 1.5px

    svg .wedge .background
        fill: none
        stroke: #444
        opacity: 0.6

    //svg .wedge[data-ring="0"] .background
    //	fill: rgba(255,255,255,0.7)
    //	stroke: none
    //	stroke-width: 0

    svg .wedge[data-ring="0"] .background
        fill: none
        stroke: none
        stroke-width: 0px

    svg .wedge[data-ring="1"] .background
        fill: rgba(200,200,200,0.4)
        stroke-width: 0

    // hovercard css



    .hovercard.pinned .pin
        color: rgba(255,0,0,1.0)

    .hovercard .tools
        background-color: transparent
        background: #ddd
        border: 1px solid #333
        top: 1px
        left: 1px
        color: #000

    .hovercard .tools span
        padding: 2px

    .hovercard .data
        width: 100%
        cursor: pointer

    .hovercard .data table


    .hovercard .links tr
        vertical-align: middle

    .hovercard .links a
        color: blue
        font-size: 14px
        vertical-align: middle
        text-decoration: none

    .hovercard .links a:visited
        color: blue
        text-decoration: none

    .hovercard .links a:hover
        color: blue
        text-decoration: none

    .hovercard .pin
        text-align: center
        color : black
        cursor: pointer

    .hovercard .move
        cursor: move

    .hovercard .move:active
        cursor: move

    .hovercard .footer
        text-align: right
        margin-right: 5px
        color: rgb(240,10,10)
        cursor: pointer

    i.icon-ucsc
        content: url('/static/img/ucsc.png')

    i.icon-cosmic
        content: url('/static/img/cosmic.png')

    i.icon-ensembl
        content: url('/static/img/ensembl.png')

    i.icon-mirBase
        content: url('/static/img/mirbase.png')

#igv
    i.igv-app-icon
        background-color: transparent
    .igvNavigationZoom
        font-size: 24px
        i:first-child
            margin-right: 5px

.hovercard
    position: fixed
    top: 0px
    left: 0px
    /*display : block;*/
    /*visibility: hidden;*/
    z-index: 100000
    font-family: inherit !important
    font-size: 16px !important
    color: #666 !important
    line-height: 1.5em
    background: rgba(255,255,255,0.9)
    border: 2px solid #ddd
    -moz-border-radius: 3px
    -webkit-border-radius: 3px
    border-radius: 3px
    padding: 2px
    table
        margin-bottom: 10px
        td
            padding: 0px 5px

/********************************************
 * plot loading animation
 *********************************************/

.load-bar
  position: relative
  width: 100%
  height: 15px
  background-color: #fdba2c

.bar
  content: ""
  display: inline
  position: absolute
  width: 0
  height: 100%
  left: 50%
  text-align: center

.bar:nth-child(1)
  background-color: #F7991B
  -webkit-animation: loading 3s linear infinite
          animation: loading 3s linear infinite

.bar:nth-child(2)
  background-color: #49AFCD
  -webkit-animation: loading 3s linear 1s infinite
          animation: loading 3s linear 1s infinite

.bar:nth-child(3)
  background-color: #a94442
  -webkit-animation: loading 3s linear 2s infinite
          animation: loading 3s linear 2s infinite

@-webkit-keyframes loading
  from
    left: 50%
    width: 0
    z-index: 100
  33.3333%
    left: 0
    width: 100%
    z-index: 10
  to
    left: 0
    width: 100%

@keyframes loading
  from
    left: 50%
    width: 0
    z-index: 100
  33.3333%
    left: 0
    width: 100%
    z-index: 10
  to
    left: 0
    width: 100%

.worksheet-plot-loader
  height: 600px
  width: 825px
  background: #d0d0d0 !important
  z-index: 100
  margin: -6px -15px 0px -15px
  .worksheet-plot-loader div
    margin-right: auto
    margin-left: auto
  .worksheet-plot-loader i
    left: 43%
    top: 40%
    margin: auto
    font-size: 200px

.loading-text
  width: 100%
  padding-top: 180px
  font-size: 25px
  text-align: center

